unpackaged/main/default/objects/CMPL123__X123Task__c/CMPL123__X123Task__c.object-meta.xml
<CustomObject>
    <description>123 Task</description>
    <label>123 Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>123 Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>