unpackaged/main/default/objects/CMPL123__X123Task__c/fields/CMPL123__Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </CustomField>