unpackaged/main/default/objects/CMPL123__X123Task__c/fields/CMPL123__Key_Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Key_Value__c</fullName>
        <description>Key Value</description>
        <inlineHelpText>Key Value</inlineHelpText>
        <label>Key Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>