unpackaged/main/default/objects/CMPL123__X123Task__c/fields/CMPL123__Related_Object__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Related_Object__c</fullName>
        <description>Related Object</description>
        <inlineHelpText>Related Object</inlineHelpText>
        <label>Related Object</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>