unpackaged/main/default/objects/CMPL123__X123Task__c/fields/CMPL123__Task_External_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Task_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Task External Id</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>